src/index.css
body {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
  max-width: 38rem;
  padding: 2rem;
}

@media (prefers-color-scheme: dark) {
  body {
    color: rgba(255, 255, 255, 0.7);
  }
}

